# stocksdata

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.docker/postgres/: init.sql
stocksdata/: PolygonApiClient.py  database.py  main.py  settings.py
stocksdata/stocks/: models.py  service.py
stocksdata/stocks/schemas/: stock_post_request_schema.py
tests/: test_PolygonApiClient.py  test_main.py
