[tool.poetry]
name = "stocksdata"
version = "0.1.0"
description = ""
authors = ["Vinicius Imai <vinicius.imai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
