[tool.poetry]
name = "stocksdata"
version = "0.1.0"
description = ""
authors = ["Vinicius Imai <vinicius.imai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
